# rgbd-recon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: AddSubLibrary.cmake  FindBoost.cmake  FindCGAL.cmake  FindDependency.cmake  FindFastDXT.cmake  FindLibrary.cmake  FindOpenCV.cmake  FindSquish.cmake  FindZMQ.cmake
framework/: 3DPoseTracker.cpp  3DPoseTracker.h  ARTListener.cpp  ARTListener.h  BoundingBox.h  BoundingVolume.h  CMDParser.cpp  CMDParser.hpp  CMakeLists.txt  CalibVolume.cpp  CalibVolume.h  Camera.cpp  CameraNavigator.cpp  ChronoMeter.cpp  ChronoMeter.h  DXTCompressor.cpp  DXTCompressor.h  DataTypes.cpp  DataTypes.h  EvaluationVolumes.cpp  EvaluationVolumes.h  Face.cpp  Face.h  FileBuffer.cpp  FileValue.cpp  FileValue.h  FrameTimeAdjuster.cpp  FrameTimeAdjuster.h  Frustum.cpp  GPUTimer.cpp  GPUTimer.h  GlPrimitives.h  KinectCalibrationFile.cpp  KinectCalibrationFile.h  KinectSurface.cpp  KinectSurface.h  KinectSurface3.cpp  KinectSurface3.h  KinectSurfaceV2.cpp  KinectSurfaceV2.h  (+72 more)
framework/calibration/: CalibVolume.cpp  CalibVolume.h  CalibVolumes.cpp  CalibVolumes.hpp  CameraView.h  Chessboard.cpp  Chessboard.h  CornerTracker.cpp  CornerTracker.h  EvaluationVolumes.cpp  KinectCalibrationFile.cpp  KinectCalibrationFile.h  OpenCVChessboardCornerDetector.cpp  OpenCVChessboardCornerDetector.h  calibration_files.cpp  calibration_files.hpp  calibration_inverter.cpp  calibration_inverter.hpp  calibration_volume.hpp  frustum.cpp  frustum.hpp  nearest_neighbour_search.cpp  nearest_neighbour_search.hpp
framework/io/: FeedbackReceiver.cpp  FeedbackReceiver.h  FileBuffer.cpp  FileBuffer.h  configurator.cpp  configurator.hpp
framework/measurement/: GPUTimer.cpp  Timer.h  clock.cpp
framework/navigation/: CameraNavigator.cpp  CameraNavigator.h  arcball.hpp  quaternion.hpp  vectors.hpp
framework/reconstruction/: recon_calibs.cpp  recon_calibs.hpp  recon_integration.cpp  recon_integration.hpp  recon_mvt.cpp  recon_mvt.hpp  recon_points.cpp  recon_points.hpp  recon_trigrid.cpp  recon_trigrid.hpp  reconstruction.cpp  reconstruction.hpp
framework/rendering/: FourTiledWindow.cpp  FourTiledWindow.h  GlPrimitives.cpp  GlPrimitives.h  ProxyMeshGridV2.cpp  ProxyMeshGridV2.h  TextureArray.cpp  TextureArray.h  ViewArray.cpp  ViewArray.h  VolumeSliceRenderer.cpp  frustumCulling.h  gl_util.h  screen_quad.cpp  screen_quad.hpp  screen_space_measurement_tool.cpp  screen_space_measurement_tool.hpp  texture_blitter.cpp  texture_blitter.hpp  timer_database.cpp  timer_database.hpp  timer_gpu.cpp  timer_gpu.hpp  unit_cube.cpp  unit_cube.hpp  view.cpp  view.hpp  view_lod.cpp  view_lod.hpp  volume_sampler.cpp  volume_sampler.hpp
glsl/: bf.fs  bf.vs  body_texture.fs  body_texture.vs  bricks.fs  bricks.gs  bricks.vs  calib_sample.vs  calib_vis.fs  calib_vis.vs  depth_filter.fs  depth_process.fs  framebuffer_transfer.fs  inc_bbox_test.glsl  inc_bricks.glsl  inc_color.glsl  ksv3_fragment.fs  ksv3_geometry.gs  ksv3_vertex.vs  ksv3_volviz.fs  ksv3_volviz.vs  mvt_accum.fs  mvt_accum.gs  mvt_accum.vs  normal_computation.fs  pass_accum.fs  pass_accum.gs  pass_accum.vs  pass_depth.fs  pass_normalize.fs  pass_normalize.vs  points.fs  points.gs  points.vs  pre_background.fs  pre_boundary.fs  pre_depth.fs  pre_morph.fs  pre_normal.fs  pre_quality.fs  (+14 more)
source/: .nfs000000000e621e980000000d  CMakeLists.txt  README_kinect_client.txt  calib_inversion.cpp  calib_inverter.cpp  kinect_client.cpp  test_stuff.cpp
utils/: dependencies.txt  rgbdr.sublime-project
